<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.HomeFragment">


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

           <com.google.android.material.tabs.TabLayout
               android:layout_width="match_parent"
               android:layout_height="match_parent"
               app:tabMode="scrollable"
               app:tabTextAppearance="@android:style/TextAppearance"
               android:id="@+id/tab_layouthome">
               <com.google.android.material.tabs.TabItem
                   android:layout_width="wrap_content"
                   android:layout_height="wrap_content"
                   android:icon="@drawable/cerebrorepresentacion"
                   android:text="@string/representación"/>
               <com.google.android.material.tabs.TabItem
                   android:layout_width="match_parent"
                   android:layout_height="wrap_content"
                   android:icon="@drawable/cerebroaccexpresion"
                   android:text="@string/accionexpresion"/>
               <com.google.android.material.tabs.TabItem
                   android:layout_width="match_parent"
                   android:layout_height="wrap_content"
                   android:icon="@drawable/cerebrocompromiso"
                   android:text="@string/implicacion"/>
           </com.google.android.material.tabs.TabLayout>


            <androidx.viewpager2.widget.ViewPager2
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/view_pager"
                android:layout_below="@+id/tab_layouthome"/>

        </LinearLayout>
    </ScrollView>


</FrameLayout>